--- a/index.html
+++ b/index.html
@@ -75,151 +75,4 @@
         #uploadForm .form-group { margin-bottom: 1.5rem; }
         #uploadForm label { display: block; margin-bottom: 8px; font-weight: 600; }
         #uploadForm input[type="email"], #uploadForm input[type="file"] { width: 100%; padding: 10px; background-color: var(--background-color); border: 1px solid var(--border-color); border-radius: 5px; color: var(--text-color); }
-        #uploadForm input[type="file"]::file-selector-button { background-color: var(--primary-color); color: #fff; padding: 8px 12px; border: none; border-radius: 4px; cursor: pointer; margin-right: 10px; }
-        #form-message { margin-top: 1rem; padding: 10px; border-radius: 5px; display: none; text-align: center; }
-        .message-success { background-color: var(--success-color); color: #fff; }
-        .message-error { background-color: var(--error-color); color: #fff; }
-        @media (max-width: 768px) { .hero-content h1 { font-size: 2.5rem; } nav ul { display: none; } .pricing-grid { grid-template-columns: 1fr; } }
-    </style>
-</head>
-<body>
-    <header>
-        <nav class="container">
-            <a href="#" class="logo"><i class="fas fa-chart-line"></i> Apex Data</a>
-            <ul>
-                <li><a href="#how-it-works">How It Works</a></li>
-                <li><a href="#deliverables">Deliverables</a></li>
-                <li><a href="#pricing">Pricing</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section class="hero" id="hero">
-            <div class="hero-content">
-                <h1>Turn Raw Data into <span>Actionable Insights</span></h1>
-                <p>Stop waiting days. Our AI engine delivers professional data insights in hours, giving you the competitive edge you need, faster.</p>
-                <a href="#pricing" class="btn">Get Started</a>
-            </div>
-        </section>
-
-        <section id="how-it-works">
-            <div class="container">
-                <h2 class="section-title">Get Insights in 3 Simple Steps</h2>
-                <div class="how-it-works-grid">
-                    <div class="step-card">
-                        <i class="fas fa-mouse-pointer"></i>
-                        <h3>1. Try a Sample or Pick a Plan</h3>
-                        <p>Select the plan that fits your needs, or try our service for free with a small dataset.</p>
-                    </div>
-                    <div class="step-card">
-                        <i class="fas fa-cloud-upload-alt"></i>
-                        <h3>2. Upload Your Data</h3>
-                        <p>Submit your data file securely through our portal. We handle CSV, Excel, and JSON files.</p>
-                    </div>
-                    <div class="step-card">
-                        <i class="fas fa-file-alt"></i>
-                        <h3>3. Receive Insights</h3>
-                        <p>Receive a comprehensive report with professional visualizations and insights in hours.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="deliverables">
-            <div class="container">
-                <h2 class="section-title">This Is What You'll Get</h2>
-                <p style="text-align:center; max-width: 700px; margin: -1rem auto 3rem auto; color: #b0b0b0;">We transform your raw numbers into a clear, concise, and actionable report. Below is a sample of our standard output.</p>
-                <div class="deliverables-gallery">
-                    <img src="https://placehold.co/1100x600/0a1429/e0e0e0?text=Sample+Dashboard+Screenshot" alt="Sample Dashboard">
-                    </div>
-                <div class="sample-report-cta">
-                    <p>Want a closer look? Download a complete sample report in PDF format.</p>
-                    <a href="#" class="btn">Download Sample Report (PDF)</a>
-                    </div>
-            </div>
-        </section>
-
-        <section id="security">
-            <div class="container">
-                <h2 class="section-title">Our Commitment to Your Privacy</h2>
-                <p style="text-align:center; max-width: 700px; margin: -1rem auto 3rem auto; color: #b0b0b0;">Your data's security is our highest priority. We employ industry-standard practices to ensure your information remains confidential and protected at all times.</p>
-                <div class="trust-grid">
-                    <div class="step-card">
-                        <i class="fas fa-shield-alt"></i>
-                        <h3>Data Encryption</h3>
-                        <p>All data is encrypted both in transit (using TLS) and at rest on our secure servers.</p>
-                    </div>
-                    <div class="step-card">
-                        <i class="fas fa-trash-alt"></i>
-                        <h3>Secure Deletion</h3>
-                        <p>Your uploaded data is permanently deleted from our systems 24 hours after your report is delivered.</p>
-                    </div>
-                    <div class="step-card">
-                        <i class="fas fa-file-signature"></i>
-                        <h3>Strict Confidentiality</h3>
-                        <p>We will never share, sell, or view your data for any purpose other than generating your insights.</p>
-                    </div>
-                </div>
-                <div style="text-align: center; margin-top: 3rem;">
-                    <a href="privacy.html" style="color: var(--primary-color);">Read our full Privacy & Data Handling Policy</a>
-                </div>
-            </div>
-        </section>
-
-        <section id="pricing">
-            <div class="container">
-                <h2 class="section-title">Choose Your Plan</h2>
-                <div class="free-sample-cta">
-                    <h3>Want to see the magic first?</h3>
-                    <p>Get a free sample of our insights for any dataset up to 50 rows.</p>
-                    <button class="btn open-modal-btn" data-plan="Free Sample">Get Free Sample</button>
-                </div>
-                <div class="pricing-grid">
-                    <div class="pricing-card">
-                        <h3>Starter</h3>
-                        <div class="price">$100</div>
-                        <p>For small datasets and initial explorations.</p>
-                        <ul>
-                            <li><i class="fas fa-check-circle"></i>Up to <strong>500 rows</strong></li>
-                            <li><i class="fas fa-check-circle"></i>Standard Analysis & KPIs</li>
-                            <li><i class="fas fa-check-circle"></i>Key Visualizations</li>
-                            <li><i class="fas fa-check-circle"></i>24-hour Turnaround</li>
-                        </ul>
-                        <button class="btn open-modal-btn" data-plan="Starter">Select Plan & Upload</button>
-                    </div>
-                    <div class="pricing-card">
-                        <h3>Pro</h3>
-                        <div class="price">$400</div>
-                        <p>For in-depth analysis and business-critical insights.</p>
-                        <ul>
-                            <li><i class="fas fa-check-circle"></i>Up to <strong>2000 rows</strong></li>
-                            <li><i class="fas fa-check-circle"></i>Advanced Analysis & KPIs</li>
-                            <li><i class="fas fa-check-circle"></i>Interactive Dashboard</li>
-                            <li><i class="fas fa-check-circle"></i><strong>+ Custom Metric Tracking</strong></li>
-                            <li><i class="fas fa-check-circle"></i>12-hour Priority Turnaround</li>
-                        </ul>
-                        <button class="btn open-modal-btn" data-plan="Pro">Select Plan & Upload</button>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        </main>
-
-    <footer id="contact">
-        <div class="container">
-            <div class="footer-links">
-                <a href="privacy.html">Privacy Policy</a>
-                <a href="mailto:contact.apexdata@gmail.com">Contact</a>
-            </div>
-            <p>&copy; 2025 Apex Data. All Rights Reserved.</p>
-        </div>
-    </footer>
-    
-    <div id="uploadModal" class="modal-overlay"> ... </div>
-    <script> ... </script>
-    
-</body>
-</html>
+        #uploadForm input[type="file"]::file-selector-button { background-color: var(--primary-color
