--- a/index.html
+++ b/index.html
@@ -75,4 +75,8 @@
         #uploadForm .form-group { margin-bottom: 1.5rem; }
         #uploadForm label { display: block; margin-bottom: 8px; font-weight: 600; }
         #uploadForm input[type="email"], #uploadForm input[type="file"] { width: 100%; padding: 10px; background-color: var(--background-color); border: 1px solid var(--border-color); border-radius: 5px; color: var(--text-color); }
-        #uploadForm input[type="file"]::file-selector-button { background-color: var(--primary-color
+        #uploadForm input[type="file"]::file-selector-button { background-color: var(--primary-color); color: #fff; padding: 8px 12px; border: none; border-radius: 4px; cursor: pointer; margin-right: 10px; }
+        #form-message { margin-top: 1rem; padding: 10px; border-radius: 5px; display: none; text-align: center; }
+        .message-success { background-color: var(--success-color); color: #fff; }
+        .message-error { background-color: var(--error-color); color: #fff; }
+        @media (max-width: 768px) { .hero-content h1 { font-size: 2.5rem; }
