--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <style>
         :root {
             --primary-color: #007bff;
-            --primary-hover-color: #0056b3;
+            --primary-hover-color: #0069d9;
             --secondary-color: #0d1a3c;
             --background-color: #040c18;
             --text-color: #e0e0e0;
@@ -31,7 +31,7 @@
             background: rgba(4, 12, 24, 0.85); 
             backdrop-filter: blur(10px); 
             padding: 1rem 0; 
-            position: sticky; /* Sticky Nav */
+            position: sticky;
             top: 0;
             width: 100%; 
             z-index: 1000; 
@@ -49,9 +49,9 @@
         .hero-content h1 { font-size: 3.5rem; font-weight: 700; margin-bottom: 1rem; line-height: 1.2; color: #fff; }
         .hero-content h1 span { color: var(--primary-color); }
         .hero-content .sub-headline { font-size: 1.2rem; max-width: 700px; margin: 0 auto 2rem; color: #b0b0b0; font-style: italic;}
-        .btn { display: inline-block; padding: 14px 32px; background-color: var(--primary-color); color: #fff; text-decoration: none; border-radius: 8px; font-weight: 600; transition: all 0.3s ease; cursor: pointer; border: none; box-shadow: 0 4px 15px rgba(0, 123, 255, 0.2); }
-        .btn:hover { background-color: var(--primary-hover-color); transform: translateY(-3px) scale(1.05); box-shadow: 0 6px 20px rgba(0, 123, 255, 0.3); }
-        section { padding: 100px 0; } /* Increased whitespace */
+        .btn { display: inline-block; padding: 14px 32px; color: #fff; text-decoration: none; border-radius: 8px; font-weight: 600; transition: all 0.3s ease; cursor: pointer; border: none; background-image: linear-gradient(to right, #0062E6, #33AEFF); box-shadow: 0 4px 15px 0 rgba(0, 118, 255, 0.35); }
+        .btn:hover { background-image: linear-gradient(to right, #33AEFF, #0062E6); transform: translateY(-3px); box-shadow: 0 6px 20px 0 rgba(0, 118, 255, 0.5); }
+        section { padding: 100px 0; }
         .section-title { text-align: center; margin-bottom: 3rem; font-size: 2.5rem; font-weight: 600; }
         .how-it-works-grid, .trust-grid, .faq-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; }
         .step-card { background: var(--card-bg-color); padding: 2rem; border-radius: 10px; border: 1px solid var(--border-color); text-align: center; }
@@ -75,14 +75,16 @@
         .pricing-card ul li { margin-bottom: 0.75rem; }
         .pricing-card ul li i { color: var(--success-color); margin-right: 10px; }
         .pricing-card .btn { width: 100%; margin-top: auto; }
+        .faq-grid { grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); }
         .faq-item { background: var(--card-bg-color); padding: 1.5rem; border-radius: 8px; border-left: 4px solid var(--primary-color); }
         .faq-item h3 { margin-bottom: 0.5rem; }
         #about { background-color: var(--secondary-color); }
         #about p { text-align: center; max-width: 700px; margin: 0 auto; font-size: 1.2rem; line-height: 1.8; }
-        #contact { text-align: center; }
-        #contact p { font-size: 1.2rem; margin-bottom: 2rem; }
-        #contact .contact-link { font-size: 1.5rem; color: var(--primary-color); text-decoration: none; font-weight: 600; }
-        #contact .contact-link:hover { text-decoration: underline; }
+        .contact-form-container { max-width: 700px; margin: 0 auto; background: var(--card-bg-color); padding: 2.5rem; border-radius: 10px; }
+        .form-group { margin-bottom: 1.5rem; }
+        .form-group label { display: block; margin-bottom: 8px; font-weight: 600; }
+        .form-group input, .form-group textarea { width: 100%; padding: 12px; background-color: var(--background-color); border: 1px solid var(--border-color); border-radius: 5px; color: var(--text-color); font-family: 'Poppins', sans-serif; font-size: 1rem; }
+        .form-group textarea { resize: vertical; min-height: 150px; }
         footer { text-align: center; padding: 3rem 0; background-color: #02060c; border-top: 1px solid var(--border-color); }
         .footer-content { display: flex; justify-content: space-around; align-items: flex-start; flex-wrap: wrap; gap: 2rem; max-width: 600px; margin: 0 auto 2rem auto; }
         .footer-col h4 { margin-bottom: 1rem; color: #fff; }
@@ -204,11 +206,15 @@
                     </div>
                     <div class="faq-item">
                         <h3>How do you handle my data's privacy?</h3>
-                        <p>Your data is encrypted at all times and permanently deleted from our systems 24 hours after your report is delivered. Please read our full Privacy Policy for more details.</p>
+                        <p>Your data is encrypted at all times and permanently deleted from our systems 24 hours after your report is delivered. You can read our full <a href="privacy.html">Privacy Policy</a> for more details.</p>
                     </div>
                     <div class="faq-item">
                         <h3>Can I request specific metrics or KPIs?</h3>
-                        <p>Yes! Our Pro plan includes the option for custom metric tracking. After uploading your file, you can specify what you're looking for in a follow-up email.</p>
+                        <p>Yes! Our Pro plan includes the option for custom metric tracking. You can specify your needs after placing your order.</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3>What is your refund policy?</h3>
+                        <p>Due to the digital nature of our service, we do not offer refunds once work has begun. However, if you are unsatisfied with your report, please contact us and we will work with you to make it right.</p>
                     </div>
                 </div>
             </div>
@@ -223,12 +229,27 @@
 
         <section id="contact">
             <div class="container">
-                <h2 class="section-title">Have Questions?</h2>
-                <p>If you have a custom project or any questions, feel free to reach out.</p>
-                <a href="mailto:contact.apexdata@gmail.com" class="contact-link">contact.apexdata@gmail.com</a>
+                <h2 class="section-title">Get in Touch</h2>
+                <p style="text-align:center; max-width: 700px; margin: -2rem auto 3rem auto; color: #b0b0b0;">Have a question, a custom project, or just want to say hello? Send us a message!</p>
+                <div class="contact-form-container">
+                    <form action="https://formspree.io/f/YOUR_UNIQUE_CODE" method="POST">
+                        <div class="form-group">
+                            <label for="name">Your Name</label>
+                            <input type="text" id="name" name="name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Your Email</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea id="message" name="message" required></textarea>
+                        </div>
+                        <button type="submit" class="btn" style="width:100%;">Send Message</button>
+                    </form>
+                </div>
             </div>
         </section>
-
     </main>
 
     <footer>
@@ -261,6 +282,6 @@
     
     <div id="uploadModal" class="modal-overlay"> ... </div>
     <script> ... </script>
-    
+
 </body>
 </html>
