--- a/index.html
+++ b/index.html
@@ -154,57 +154,4 @@
             <div class="container">
                 <h2 class="section-title">Get Insights in 3 Simple Steps</h2>
                 <div class="how-it-works-grid">
-                    <div class="step-card">
-                        <i class="fas fa-mouse-pointer"></i>
-                        <h3>1. Pick a Plan or Try a Sample</h3>
-                        <p>Select the plan that fits your needs, or try our service for free with a small dataset.</p>
-                    </div>
-                    <div class="step-card">
-                        <i class="fas fa-cloud-upload-alt"></i>
-                        <h3>2. Upload Your Data Securely</h3>
-                        <p>Submit your data file through our portal. We handle CSV, Excel, and JSON files.</p>
-                    </div>
-                    <div class="step-card">
-                        <i class="fas fa-file-alt"></i>
-                        <h3>3. Receive Your Report</h3>
-                        <p>Receive a comprehensive, professional report with visualizations and insights.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="deliverables">
-            <div class="container">
-                <h2 class="section-title">This Is What You'll Get</h2>
-                <p style="text-align:center; max-width: 700px; margin: -2rem auto 3rem auto; color: var(--text-color-light);">We transform your raw numbers into a clear, concise, and actionable report. Below is a sample of our standard output.</p>
-                <div class="deliverables-gallery">
-                    <img src="https://placehold.co/1100x600/E9ECEF/212529?text=Sample+Dashboard+Screenshot" alt="Sample Dashboard">
-                </div>
-                <div class="sample-report-cta">
-                    <p>Want a closer look? Download a complete sample report in PDF format.</p>
-                    <a href="#" class="btn">Download Sample Report (PDF)</a>
-                </div>
-            </div>
-        </section>
-
-        <section id="security">
-            <div class="container">
-                <h2 class="section-title">Our Commitment to Your Privacy</h2>
-                <p style="text-align:center; max-width: 700px; margin: -2rem auto 3rem auto; color: var(--text-color-light);">
-                    Your data is protected with end-to-end encryption, processed on Google Cloud's secure infrastructure, and permanently deleted 24 hours after your report is delivered.
-                </p>
-                <div class="trust-grid">
-                    <div class="step-card">
-                        <i class="fas fa-shield-alt"></i>
-                        <h3>Data Encryption</h3>
-                        <p>All data is encrypted both in transit (using TLS) and at rest on our secure servers.</p>
-                    </div>
-                    <div class="step-card">
-                        <i class="fas fa-trash-alt"></i>
-                        <h3>Secure Deletion</h3>
-                        <p>Your uploaded data is permanently deleted from our systems 24 hours after your report is delivered.</p>
-                    </div>
-                    <div class="step-card">
-                        <i class="fas fa-file-signature"></i>
-                        <h3>Strict Confidentiality</h3>
-                        <p>We will never share, sell, or view your data for any purpose other than generating your insights.</p>
+                    <div class
