--- a/index.html
+++ b/index.html
@@ -63,95 +63,4 @@
         .logo i { color: var(--primary-color); }
         nav ul { display: flex; list-style: none; }
         nav ul li { margin-left: 30px; }
-        nav ul li a { color: var(--text-color); text-decoration: none; font-weight: 500; transition: color 0.3s ease; }
-        nav ul li a:hover { color: var(--primary-color); }
-        .hero { min-height: 90vh; display: flex; align-items: center; justify-content: center; text-align: center; background: linear-gradient(rgba(4, 12, 24, 0.6), rgba(4, 12, 24, 0.6)), url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?q=80&w=2070&auto=format&fit=crop') no-repeat center center/cover; }
-        .hero-content { padding-top: 40px; }
-        .hero-content h1 { font-size: 3.5rem; font-weight: 700; margin-bottom: 1rem; line-height: 1.2; color: #fff; }
-        .hero-content h1 span { color: var(--primary-color); }
-        .hero-content .sub-headline { font-size: 1.2rem; max-width: 700px; margin: 0 auto 2rem; color: #e0e0e0; font-style: italic;}
-        .btn { display: inline-block; padding: 14px 32px; color: #fff; text-decoration: none; border-radius: 8px; font-weight: 600; transition: all 0.3s ease; cursor: pointer; border: none; background-image: linear-gradient(to right, #0062E6, #33AEFF); box-shadow: 0 4px 15px 0 rgba(0, 118, 255, 0.35); }
-        .btn:hover { background-image: linear-gradient(to right, #33AEFF, #0062E6); transform: translateY(-3px); box-shadow: 0 6px 20px 0 rgba(0, 118, 255, 0.5); }
-        section { padding: 100px 0; }
-        .section-title { text-align: center; margin-bottom: 3rem; font-size: 2.5rem; font-weight: 600; }
-        .step-card, .faq-item { background: var(--card-bg-color); padding: 2rem; border-radius: 10px; border: 1px solid var(--border-color); text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.05); }
-        .step-card i { font-size: 3rem; color: var(--primary-color); margin-bottom: 1rem; }
-        .step-card h3 { font-size: 1.5rem; margin-bottom: 0.5rem; }
-        #deliverables { background-color: var(--secondary-color); }
-        .deliverables-gallery { border: 1px solid var(--border-color); border-radius: 10px; overflow: hidden; margin-top: 2rem; box-shadow: 0 8px 25px rgba(0,0,0,0.1); }
-        .deliverables-gallery img { width: 100%; height: auto; display: block; }
-        .sample-report-cta { text-align: center; margin-top: 3rem; }
-        .sample-report-cta p { margin-bottom: 1rem; font-size: 1.1rem; }
-        .free-sample-cta { text-align: center; background-color: var(--card-bg-color); padding: 2.5rem; border-radius: 10px; margin: 3rem auto; border: 1px solid var(--primary-color); max-width: 800px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); }
-        .free-sample-cta h3 { font-size: 1.5rem; margin-bottom: 0.5rem; }
-        .free-sample-cta p { margin-bottom: 1.5rem; color: var(--text-color-light); }
-        .pricing-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2.5rem; max-width: 800px; margin: 0 auto; }
-        .pricing-card { background: var(--card-bg-color); padding: 2.5rem; border-radius: 10px; border: 1px solid var(--border-color); text-align: center; transition: transform 0.3s ease, box-shadow 0.3s ease; display: flex; flex-direction: column; }
-        .pricing-card:hover { transform: translateY(-10px); box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1); }
-        .pricing-card h3 { font-size: 1.8rem; margin-bottom: 1rem; }
-        .price { font-size: 3rem; font-weight: 700; margin-bottom: 0.5rem; color: var(--primary-color); }
-        .pricing-card p { font-size: 1rem; color: var(--text-color-light); margin-bottom: 1.5rem; min-height: 48px; }
-        .pricing-card ul { list-style: none; margin-bottom: 2rem; text-align: left; flex-grow: 1; }
-        .pricing-card ul li { margin-bottom: 0.75rem; }
-        .pricing-card ul li i { color: var(--success-color); margin-right: 10px; }
-        .pricing-card .btn { width: 100%; margin-top: auto; }
-        .faq-grid { grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); }
-        .faq-item { text-align: left; border-left: 4px solid var(--primary-color); }
-        .faq-item h3 { margin-bottom: 0.5rem; }
-        #about { background-color: var(--secondary-color); }
-        #about p { text-align: center; max-width: 700px; margin: 0 auto; font-size: 1.2rem; line-height: 1.8; }
-        .contact-form-container { max-width: 700px; margin: 0 auto; background: var(--card-bg-color); padding: 2.5rem; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); }
-        .form-group { margin-bottom: 1.5rem; text-align: left; }
-        .form-group label { display: block; margin-bottom: 8px; font-weight: 600; }
-        .form-group input, .form-group textarea { width: 100%; padding: 12px; background-color: var(--background-color); border: 1px solid var(--border-color); border-radius: 5px; color: var(--text-color); font-family: 'Poppins', sans-serif; font-size: 1rem; }
-        .form-group textarea { resize: vertical; min-height: 120px; }
-        footer { text-align: center; padding: 3rem 0; background-color: #343a40; border-top: 1px solid var(--border-color); color: #fff; }
-        .footer-content { display: flex; justify-content: space-around; align-items: flex-start; flex-wrap: wrap; gap: 2rem; max-width: 600px; margin: 0 auto 2rem auto; }
-        .footer-col h4 { margin-bottom: 1rem; color: #fff; }
-        .footer-col ul { list-style: none; }
-        .footer-col ul li { margin-bottom: 0.5rem; }
-        .footer-col a { color: #e0e0e0; text-decoration: none; }
-        .footer-col a:hover { color: var(--primary-color); }
-        .modal-overlay { display: none; position: fixed; z-index: 2000; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.6); justify-content: center; align-items: center; }
-        .modal-content { background-color: var(--card-bg-color); margin: auto; padding: 30px; border: 1px solid var(--border-color); border-radius: 10px; width: 90%; max-width: 500px; position: relative; box-shadow: 0 5px 15px rgba(0,0,0,0.2); }
-        .close-button { color: #aaa; float: right; font-size: 28px; font-weight: bold; position: absolute; top: 10px; right: 20px; }
-        .close-button:hover, .close-button:focus { color: var(--text-color); text-decoration: none; cursor: pointer; }
-        #uploadForm .form-group { margin-bottom: 1.5rem; text-align: left; }
-        #uploadForm textarea { resize: vertical; min-height: 120px; }
-        @media (max-width: 768px) { .hero-content h1 { font-size: 2.5rem; } nav ul { display: none; } .pricing-grid { grid-template-columns: 1fr; } }
-    </style>
-</head>
-<body>
-
-    <div class="top-banner" id="topBanner">
-        Save <strong>days</strong> of data analysis, get insights in <strong>hours</strong> with Apex Data.
-        <span class="top-banner-close" id="closeBanner">&times;</span>
-    </div>
-
-    <header>
-        <nav class="container">
-            <a href="index.html" class="logo"><i class="fas fa-chart-line"></i> Apex Data</a>
-            <ul>
-                <li><a href="#how-it-works">How It Works</a></li>
-                <li><a href="#deliverables">Sample</a></li>
-                <li><a href="#pricing">Pricing</a></li>
-                <li><a href="#faq">FAQ</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section class="hero" id="hero">
-            <div class="hero-content">
-                <h1>AI-Powered Business Insights <span>from Raw Data in Just Hours</span></h1>
-                <p class="sub-headline">Trusted by professionals in retail, trading, and finance.</p>
-                <a href="#pricing" class="btn">Get Started</a>
-            </div>
-        </section>
-
-        <section id="how-it-works">
-            <div class="container">
-                <h2 class="section-title">Get Insights in 3 Simple Steps</h2>
-                <div class="how-it-works-grid">
-                    <div class
+        nav
