--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         :root {
             --primary-color: #007bff;
             --primary-hover-color: #0056b3;
-            --secondary-color: #e9ecef;      /* Softer gray for section backgrounds */
-            --background-color: #f8f9fa;     /* Very light off-white for the main body */
-            --text-color: #212529;         /* Dark, soft black for text */
-            --text-color-light: #495057;    /* Lighter gray for sub-text */
-            --card-bg-color: #ffffff;      /* Pure white for cards */
-            --border-color: #dee2e6;       /* Subtle light gray for borders */
+            --secondary-color: #e9ecef;
+            --background-color: #f8f9fa;
+            --text-color: #212529;
+            --text-color-light: #495057;
+            --card-bg-color: #ffffff;
+            --border-color: #dee2e6;
             --success-color: #28a745;
             --error-color: #dc3545;
         }
@@ -205,45 +205,3 @@
                         <p>Your uploaded data is permanently deleted from our systems 24 hours after your report is delivered.</p>
                     </div>
                     <div class="step-card">
-                        <i class="fas fa-file-signature"></i>
-                        <h3>Strict Confidentiality</h3>
-                        <p>We will never share, sell, or view your data for any purpose other than generating your insights.</p>
-                    </div>
-                </div>
-                <div style="text-align: center; margin-top: 3rem;">
-                    <a href="privacy.html" style="color: var(--primary-color);">Read our full Privacy & Data Handling Policy</a>
-                </div>
-            </div>
-        </section>
-
-        <section id="pricing">
-            <div class="container">
-                <h2 class="section-title">Choose Your Plan</h2>
-                <div class="free-sample-cta">
-                    <h3>Want to see the magic first?</h3>
-                    <p>Get a free sample of our insights for any dataset up to 50 rows.</p>
-                    <button class="btn open-modal-btn" data-plan="Free Sample">🎯 Try Free Sample</button>
-                </div>
-                <div class="pricing-grid">
-                    <div class="pricing-card">
-                        <h3>Starter</h3>
-                        <div class="price">$100</div>
-                        <p>Perfect for startups, pilots, or one-time projects.</p>
-                        <ul>
-                            <li><i class="fas fa-check-circle"></i>Up to <strong>500 rows</strong> of data</li>
-                            <li><i class="fas fa-check-circle"></i>2-3 Key Insights & KPIs</li>
-                            <li><i class="fas fa-check-circle"></i>Core Visualizations (Charts & Graphs)</li>
-                            <li><i class="fas fa-check-circle"></i>Report delivered in PDF format</li>
-                            <li><i class="fas fa-check-circle"></i>Delivery within <strong>6 hours</strong></li>
-                        </ul>
-                        <button class="btn open-modal-btn" data-plan="Starter">🚀 Get My Report</button>
-                    </div>
-                    <div class="pricing-card">
-                        <h3>Pro</h3>
-                        <div class="price">$400</div>
-                        <p>For in-depth analysis and business-critical insights.</p>
-                        <ul>
-                            <li><i class="fas fa-check-circle"></i>Up to <strong>2000 rows</strong> of data</li>
-                            <li><i class="fas fa-check-circle"></i>Detailed Trend & Anomaly Analysis</li>
-                            <li><i class="fas fa-check-circle"></i>Advanced KPIs & Metrics</li>
-                            <li><i class="fas fa-check-circle"></i><strong>Interactive Dashboard</strong>
