--- a/index.html
+++ b/index.html
@@ -219,7 +219,6 @@
                 </p>
 
                 <div class="pricing-grid">
-                    <!-- Free Sample Card -->
                     <div class="pricing-card">
                         <h3>Free Sample</h3>
                         <div class="price">$0</div>
@@ -228,49 +227,44 @@
                         <button class="btn open-modal-btn" data-plan="Free Sample">🎯 Try Free Sample</button>
                     </div>
 
-                    <!-- Starter Card -->
                     <div class="pricing-card">
-                        <h3>Starter</h3>
-                        <div class="price">$100</div>
-                        <p>Up to <strong>500 rows</strong>. Perfect for startups and small projects.</p>
-                        <span class="delivery-time">Within 6 Hours</span>
-                        <button class="btn open-modal-btn" data-plan="Starter">🚀 Get My Report</button>
+                        <h3>Starter (2,000 Rows)</h3>
+                        <div class="price">$399</div>
+                        <p>Up to <strong>2,000 rows</strong>. Perfect for pilots or one-time projects. **48 HR SLA**</p>
+                        <span class="delivery-time">30 MIN PRIORITY: $799</span>
+                        <button class="btn open-modal-btn" data-plan="Starter">🚀 Get Started</button>
                     </div>
 
-                    <!-- Pro Card -->
                     <div class="pricing-card highlight">
-                        <h3>Pro</h3>
-                        <div class="price">$400</div>
-                        <p>Up to <strong>2,000 rows</strong>. For standard business analysis.</p>
-                        <span class="delivery-time">Within 3 Hours</span>
-                        <button class="btn open-modal-btn" data-plan="Pro">⚡ Unlock Insights</button>
+                        <h3>Advanced (4,500 Rows)</h3>
+                        <div class="price">$899</div>
+                        <p>Up to <strong>4,500 rows</strong>. Optimal for weekly business analysis. **72 HR SLA**</p>
+                        <span class="delivery-time">6 HOUR PRIORITY: $1,599</span>
+                        <button class="btn open-modal-btn" data-plan="Advanced">⚡ Unlock Insights</button>
                     </div>
 
-                    <!-- Pro Plus Card -->
                     <div class="pricing-card">
-                        <h3>Pro Plus</h3>
-                        <div class="price">$800</div>
-                        <p>Up to <strong>6,000 rows</strong>. For deep-dive analysis.</p>
-                        <span class="delivery-time">Priority: Within 2 Hours</span>
-                        <button class="btn open-modal-btn" data-plan="Pro Plus">⚡ Unlock Insights</button>
+                        <h3>Pro Volume (9,000 Rows)</h3>
+                        <div class="price">$1,499</div>
+                        <p>Up to <strong>9,000 rows</strong>. Serious power for monthly audits. **96 HR SLA**</p>
+                        <span class="delivery-time">12 HOUR PRIORITY: $2,499</span>
+                        <button class="btn open-modal-btn" data-plan="Pro Volume">⚡ Unlock Insights</button>
                     </div>
 
-                    <!-- Business Card -->
                     <div class="pricing-card">
-                        <h3>Business</h3>
-                        <div class="price">$1,500</div>
-                        <p>Up to <strong>10,000 rows</strong>. A complete strategic solution.</p>
-                        <span class="delivery-time">Top Priority: Within 2 Hours</span>
-                        <button class="btn open-modal-btn" data-plan="Business">⚡ Unlock Insights</button>
+                        <h3>Bulk Batch (15,000 Rows)</h3>
+                        <div class="price">$2,299</div>
+                        <p>Up to <strong>15,000 rows</strong>. For data migration or quarterly events. **120 HR SLA**</p>
+                        <span class="delivery-time">18 HOUR PRIORITY: $3,499</span>
+                        <button class="btn open-modal-btn" data-plan="Bulk Batch">⚡ Get Bulk Report</button>
                     </div>
 
-                    <!-- Enterprise Card -->
                     <div class="pricing-card">
-                        <h3>Enterprise</h3>
-                        <div class="price">$3,000</div>
-                        <p>Up to <strong>40,000 rows</strong>. For large-scale projects.</p>
-                        <span class="delivery-time">Dedicated Engine: Within 48 Hours</span>
-                        <a href="#contact" class="btn">Contact Sales</a>
+                        <h3>Apex Vault (20,000 Rows)</h3>
+                        <div class="price">$4,999</div>
+                        <p>Up to <strong>20,000 rows</strong>. Integrity, Compliance & $500 Guarantee. **6 HR SLA**</p>
+                        <span class="delivery-time">6 HOUR PRIORITY: $4,999</span>
+                        <button class="btn open-modal-btn" data-plan="Apex Vault">🔑 Activate Vault</button>
                     </div>
                 </div>
             </div>
@@ -483,4 +477,3 @@
     
 </body>
 </html>
-
